--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "grunt-multi-forever": "~0.4.1",
     "grunt-browserify2": "^0.1.8",
     "ejsify": "0.0.2",
-    "browserify-ejs": "~0.0.2"
+    "browserify-ejs": "~0.0.2",
+    "grunt-react": "~0.10.0"
   }
 }
