--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "private": true,
   "dependencies": {
     "express": "~4.9.7",
-    "request": "~2.45.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-multi-forever": "~0.4.1",
-    "grunt-browserify2": "^0.1.8",
-    "ejsify": "0.0.2",
-    "browserify-ejs": "~0.0.2",
-    "grunt-react": "~0.10.0"
+    "request": "~2.45.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.10",
+    "gulp-browserify": "^0.5.0",
+    "gulp-concat": "^2.4.1",
+    "gulp-react": "^2.0.0",
+    "gulp-requirejs": "^0.1.3"
   }
 }
