--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "private": true,
   "dependencies": {
     "express": "~4.9.7",
-    "request": "~2.45.0"
-  },
-  "devDependencies": {
+    "request": "~2.45.0",
     "gulp": "^3.8.10",
     "gulp-browserify": "^0.5.0",
     "gulp-concat": "^2.4.1",
     "gulp-react": "^2.0.0",
     "gulp-requirejs": "^0.1.3"
+  },
+  "engines": {
+    "node": "0.10.x"
   }
 }
