--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "gulp": "^3.8.10",
     "gulp-browserify": "^0.5.0",
     "gulp-concat": "^2.4.1",
-    "gulp-react": "^2.0.0",
+    "gulp-react": "2.0.0",
     "gulp-requirejs": "^0.1.3"
   },
   "engines": {
