--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "private": true,
   "dependencies": {
     "express": "~4.9.7",
-    "request": "~2.45.0",
+    "flux": "^2.0.1",
     "gulp": "^3.8.10",
     "gulp-browserify": "^0.5.0",
     "gulp-concat": "^2.4.1",
     "gulp-react": "2.0.0",
-    "gulp-requirejs": "^0.1.3"
+    "gulp-requirejs": "^0.1.3",
+    "keymirror": "^0.1.0",
+    "object-assign": "^1.0.0",
+    "request": "~2.45.0"
   },
   "engines": {
     "node": "0.10.x"
